<resources>
    <string name="app_name">EasyTable</string>
    <string name="welcome_strings">Bienvenido!</string>
    <string name="user_text">Usuario: </string>
    <string name="password_text">Contraseña: </string>
    <string name="login_text">Ingresar</string>
    <string name="register_text">Registrarse</string>
    <string name="registrarUsuario_strings">Ingresa los siguientes datos:</string>
    <string name="registrarme_strings">Registrarme</string>
    <string name="name_strings">Nombre(s):</string>
    <string name="apellidos_strings">Apellido(s):</string>
    <string name="telefono_strings">Telefono: </string>
    <string name="correo_strings">Correo:</string>
    <string name="buscar_strings">Buscar</string>
    <string name="registrarRestaurante_strings">Ingresa los siguientes datos de tu restaurante:</string>
    <string name="nombreLocal_strings">Nombre del local:</string>
    <string name="direccion_strings">Dirección:</string>
    <string name="cp_strings">Código Postal: </string>
    <string name="comidarapida_strings">Comida Rapida</string>
    <string name="categoria_strings">Categorias: </string>
    <string name="registrarRestaurante2_strings">Selecciona la Categoría de tu Restaurante</string>
    <string name="buffets_strings">Buffet</string>
    <string name="tematico_strings">Temático</string>
    <string name="paraLlevar_strings">Para Llevar</string>
    <string name="deAuto_strings">De Auto</string>
    <string name="altaCocina_strings">Alta Cocina</string>
    <string name="fusion_strings">Fusión</string>
    <string name="comidaMexicana_strings">Comida Mexicana</string>
    <string name="comidaAsiatica_strings">Comida Asiatica</string>
    <string name="comidaItaliana_strings">Comida Italiana</string>
    <string name="descripcionAgregarRestaurante_strings">Agrega una breve descripción de tu restaurante: </string>
    <string name="descripcion_strings">Descripción:</string>
    <string name="reservar_strings">RESERVAR</string>
    <string name="cerrar_sesion_strings">Cerrar Sesión</string>
    <string name="buscador_strings">Buscador</string>
    <string name="comentario">Comentario</string>
    <string name="comenterio_aleatorio">Comenterio aleatorio</string>
    <string name="des">Descripcion del local</string>
    <string name="numero_mesas_strings">N° de mesas: </string>
    <string name="restaurante_strings">Nombre del Restaurante</string>
    <string name="buscarRes_strings">Buscar</string>
    <string name="nombreplatillo_strings">Nombre Platillo</string>
    <string name="costo_strings">Costo</string>
    <string name="a_adir">Añadir</string>
    <string name="queja">Queja</string>
    <string name="pagar">Pagar</string>
    <string name="cuenta">Cuenta:</string>
    <string name="ordenar">Ordenar</string>
    <string name="agregar_empleado_strings">Agregar un nuevo empleado</string>
    <string name="editar_empleado">Editar datos de un empleado</string>
    <string name="ver_listado_empleados_strings">Ver listado de todos tus empleados</string>
    <string name="eliminar_empleado_strings">Eliminar a un empleado</string>
    <string name="crud_empleados">¿Que deseas hacer?</string>
    <string name="nuevo_empleado_strings">Ingresa los datos del nuevo empleado: </string>
    <string name="registrar_empleado_strings">Registrar Empleado</string>
    <string name="editar_empleado_strings">Ingresa los nuevos datos del empleado: </string>
    <string name="editar_empleado_button_strings">Modificar</string>
    <string name="nombre_empleado_strings">Nombre del Empleado</string>
    <string name="tipo_de_usuario">Tipo de Usuario</string>
    <string name="seleccion_empleado_strings">Selecciona al empleado que deseas editar</string>
    <string name="puesto_actual">Puesto del empleado</string>
    <string name="listado_empleados_strings">Listado de los empleados</string>
    <string name="seleccion_empleado_eliminar_strings">Selecciona el empleado a eliminar</string>
    <string name="resultado_tipo_restaurante_strings">Restaurantes que coincidieron con la categoria: </string>
    <string name="resultado_nombre_restaurante_strings">Restaurantes que coincidieron con el nombre:</string>
    <string name="problema_strings">Ingresa cual fue el problema:</string>
    <string name="detalles_queja_strings">El mensaje se enviará al administrador para informarle del problema y poder darte una solución.</string>
    <string name="pagar_tv_strings">El total que vas a a pagar es:</string>
    <string name="monto_strings">Monto a pagar</string>
    <string name="pagar_strings">Pagar</string>
    <string name="agregar_platillo_strings">Agregar Nuevo Platillo</string>
    <string name="local_strings">Local</string>
    <string name="listado_recursos_strings">Listado de Recursos</string>
    <string name="meseros_trabajando_strings">Meseros Trabajando</string>
    <string name="ingresa_datos_strings">Ingresa los siguientes datos:</string>
    <string name="nombre_platillo_strings">Nombre del platillo/bebida:</string>
    <string name="registrar_platillo_strings">Registrar Platillo/Bebida</string>
    <string name="agregar_ingrediente_strings">Agregar nuevo Ingrediente</string>
    <string name="eliminar_ingrediente_strings">Eliminar Ingrediente</string>
    <string name="recursos_strings">Recursos</string>
    <string name="nombre_ingrediente_strings">Nombre del ingrediente:</string>
    <string name="disponibilidad_strings">Disponibilidad:</string>
    <string name="eliminar_recurso_strings">Selecciona el ingrediente a eliminar</string>
    <string name="inicio_strings">Volver al Inicio</string>
    <string name="pago_exitoso_strings">Pago Exitoso</string>
    <string name="listado_codigos_qr">Listado codigos QR</string>
    <string name="seleciona_la_mesa">Seleciona la mesa</string>
    <string name="ordenes_strings">Ordenes</string>
    <string name="ordenes_terminadas_strings">Ordenes Terminadas</string>
    <string name="numero_mesa_strings">Mesa #n</string>
    <string name="estado_preparacion_strings">Estado Preparacion</string>
    <string name="ordenes_preparacion_strings">Ordenes en Preparacion</string>
    <string name="cantidad_strings">Cantidad</string>
    <string name="meseros_trabajando_2_strings">Los meseros que estan trabajando en este momento son:</string>
    <string name="asignar_mesero_strings">Asignar Mesero</string>
    <string name="apartar_lugares_strings">Apartar Lugares</string>
    <string name="selecciona_strings">(Selecciona uno)</string>
    <string name="mesas_disponibles_strings">Mesas disponibles</string>
    <string name="solicitudes_strings">Solicitudes de reservación</string>
    <string name="nombre_reservar_strings">Nombre del usuario a reservar</string>
    <string name="fecha_strings">Fecha:</string>
    <string name="hora_strings">Hora:</string>
    <string name="cant_personas_strings">Cant. Personas:</string>
    <string name="reservacion_strings">Reservacion</string>
    <string name="metodo_pago_strings">Selecciona tu método de pago:</string>
    <string name="pago_en_efectivo_strings">Pago en efectivo</string>
    <string name="paga_la_cantidad_de">Paga la cantidad de</string>
    <string name="entendido_strings">Entendido</string>
    <string name="ventas_strings">Ventas</string>
    <string name="ventas_totales_del_local_strings">Ventas totales del local</string>
    <string name="ocupada_strings">Ocupada</string>
    <string name="libre_strings">Libre</string>
    <string name="estado_del_pago_strings">Estado del pago</string>
    <string name="click_detalles_strings">Click para ver detalles</string>
    <string name="forma_pagada_strings">Metodo de Pago:</string>
    <string name="cancelar">Cancelar</string>
    <string name="cuentas_strings">Cuentas</string>
    <string name="eliminar_platillo_strings">Eliminar Platillo</string>
    <string name="editar_platillo_strings">Editar Platillo</string>
    <string name="selecciona_el_platillo_que_quieres_editar_strings">Selecciona el platillo que quieres editar</string>
    <string name="listado_de_los_platillos_strings">Listado de los platillos y bebidas</string>
    <string name="platillos_strings">Platillos/Bebidas</string>
    <string name="nuevos_datos_platillo_strings">Ingresa los nuevos datos del platillo/bebida</string>
    <string name="selecciona_el_platillo_que_quieres_eliminar_strings">Selecciona el platillo/bebida que quieres eliminar</string>
    <string name="estado_reservacion_strings">Estado de la reservación:</string>
    <string name="comentarios_especificaciones_strings">Comentarios/Especificaciones para el cocinero</string>
    <string name="costo_unitario_strings">Costo unitario</string>
    <string name="nueva_contraseña_strings">A continuación ingresa una nueva contraseña para tu perfil</string>
    <string name="nueva_contraseña_2_strings">Esta contraseña es la que usaras  en adelante para iniciar sesion</string>
    <string name="nueva_contrase_strings">Nueva Contraseña</string>
    <string name="confirma_la_contrase_strings">Confirma la contraseña</string>
    <string name="cambiar_contrase_strings">Cambiar Contraseña</string>
    <string name="que_tal_estuvo_tu_strings">Que tal estuvo tu…?</string>
    <string name="puntua_y_comenta_tu_platillo_strings">Haz click y puntúa tu platillo/bebida </string>
    <string name="ingresa_un_comentario_para_el_restaurante_strings">Ingresa un comentario para el restaurante</string>
    <string name="enviar_calificacion_strings">Enviar calificacion</string>
    <string name="listo_strings">Listo</string>
    <string name="indicaciones_para_el_platillo_strings">Indicaciones para el platillo</string>
    <string name="terminos_y_condiciones_aviso_strings">Términos y Condiciones Easy Table</string>
    <string name="tye_1_strings">La presente Política de Privacidad establece los términos en que Easy Table usa y protege la información que es proporcionada por sus usuarios al momento de utilizar su aplicación.</string>
    <string name="tye_2_strings">Nuestra aplicación no recogerá información personal ingresada por usted, como por ejemplo: Nombre, información de contacto o su dirección de correo electrónico.</string>
    <string name="tye_3_strings">Los desarrolladores de la aplicacion no venderán, cederán ni distribuirán la información personal que haya ingresado dentro de la aplicación sin su consentimiento, salvo que sea requerido por un juez con una orden judicial.</string>
    <string name="tye_4_strings">Easy Table se reserva el derecho de cambiar los términos de la presente Política de Privacidad en cualquier momento.</string>
    <string name="tye_5_strings">Al momento de registrarse con un usuario y una contraseña en nuestra aplicación se da por entendido que ha leído los presentes términos y está de acuerdo con ellos.</string>
    <string name="atentamente_easy_table_strings">Atentamente: Easy Table</string>
    <string name="t_rminos_y_condiciones_button_strings">Términos y Condiciones</string>
    <string name="quejas_de_los_clientes_strings">Quejas de los clientes</string>
    <string name="cobra_la_cantidad_de_strings">Cobra la cantidad de</string>
    <string name="pago_realizado_strings">Pago Realizado</string>
    <string name="aviso_pago_realizado_strings">Una vez hecho el pago al mesero, porfavor presiona el botón "PAGO REALIZADO"</string>
    <string name="cuentas_pagadas_strings">Cuentas pagadas</string>
    <string name="cuentas_sin_pagar_strings">Cuentas Sin Pagar</string>
    <string name="tarjeta_paypal_strings">Tarjeta/Paypal</string>
    <string name="efectivo_strings">Efectivo</string>
    <string-array name="metodos_pago_strings">
        <item>Efectivo</item>
        <item>Tarjeta/Paypal</item>
    </string-array>
    <string-array name="tipo_de_cliente_strings">
        <item>Cliente</item>
        <item>Dueño del Local</item>
    </string-array>
</resources>