<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".TerminosCondiciones">

    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/terminos_y_condiciones_aviso_strings"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tye_1_strings"
        android:textColor="@color/black"
        android:layout_marginTop="15dp"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tye_2_strings"
        android:layout_marginTop="15dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tye_3_strings"
        android:textColor="@color/black"
        android:layout_marginTop="15dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tye_4_strings"
        android:layout_marginTop="15dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tye_5_strings"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginTop="15dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/atentamente_easy_table_strings"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        />

</LinearLayout>