<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".PrincipalUCO">

    <Button
        android:id="@+id/ordenesButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ordenes_strings"
        android:layout_marginTop="35dp"
        />

    <Button
        android:id="@+id/ordenesPreparacionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ordenes_preparacion_strings"
        android:layout_marginTop="35dp"
        />

    <Button
        android:id="@+id/ordenesTerminadasButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ordenes_terminadas_strings"
        android:layout_marginTop="35dp"
        />

    <Button
        android:id="@+id/recursosButtonCocinero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recursos_strings"
        android:layout_marginTop="35dp"
        />

    <Button
        android:id="@+id/cambiarConButtonCocinero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cambiar_contrase_strings"
        android:layout_marginTop="35dp"
        />


    <Button
        android:id="@+id/LogOutButtonCocinero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cerrar_sesion_strings"
        android:layout_marginTop="35dp"
        />

</LinearLayout>