<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".RegistrarUsuario">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registrarUsuario_strings"
        android:textSize="40sp"
        android:layout_marginTop="15dp">
    </TextView>


    <EditText
        android:id="@+id/nombreRegistrarUsuarioTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_strings"
        android:inputType="text"
        android:layout_marginTop="25dp">
    </EditText>


    <EditText
        android:id="@+id/apellidoRegistrarUsuarioTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/apellidos_strings"
        android:inputType="text"
        android:layout_marginTop="15dp">
    </EditText>


    <EditText
        android:id="@+id/telefonoRegistrarUsuarioTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/telefono_strings"
        android:layout_marginTop="15dp"
        android:inputType="phone">
    </EditText>


    <EditText
        android:id="@+id/correoRegistrarUsuarioTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/correo_strings"
        android:inputType="text"
        android:layout_marginTop="15dp">
    </EditText>


    <EditText
        android:id="@+id/usernameRegistrarUsuarioTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_text"
        android:inputType="text"
        android:layout_marginTop="15dp">
    </EditText>


    <EditText
        android:id="@+id/passwordRegistrarUsuarioTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_text"
        android:layout_marginTop="15dp"
        android:inputType="textPassword">
    </EditText>

    <Spinner
        android:id="@+id/tipoDeUsuarioRegistrarUsuarioSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:entries="@array/tipo_de_cliente_strings">
    </Spinner>

    <Button
        android:id="@+id/registrarseRegistrarUsuarioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrarme_strings"
        android:layout_marginTop="15dp"
        android:layout_gravity="center">
    </Button>



</LinearLayout>